[package]
name = "quicksauce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
base64 = "0.22.1"
clap = "4.5.8"
dotenv = "0.15.0"
sha2 = "0.10.8"
url = "2.5.2"
uuid = { version = "1.9.1", features = ["v4"] }
